--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -310,6 +310,7 @@ DashboardScreen As screen:
                             Height: =30
                             LineHeight: =1.05
                             OnSelect: =Set(VarPopup,true)
+                            PaddingTop: =0
                             Size: |-
                                 =//19.22
                                 If(Parent.Width<358,12,Parent.Width>358,16,18)
@@ -418,6 +419,7 @@ DashboardScreen As screen:
                             Height: =30
                             LineHeight: =1.05
                             OnSelect: =Set(VarPopup,true)
+                            PaddingTop: =0
                             Size: |-
                                 =//19.22
                                 If(Parent.Width<358,12,Parent.Width>358,16,18)
@@ -526,6 +528,7 @@ DashboardScreen As screen:
                             Height: =30
                             LineHeight: =1.05
                             OnSelect: =Set(VarPopup,true)
+                            PaddingTop: =0
                             Size: |-
                                 =//19.22
                                 If(Parent.Width<358,12,Parent.Width>358,16,18)
@@ -629,6 +632,7 @@ DashboardScreen As screen:
                             Height: =30
                             LineHeight: =1.05
                             OnSelect: =Set(VarPopup,true)
+                            PaddingTop: =0
                             Size: |-
                                 =//19.22
                                 If(Parent.Width<358,11,Parent.Width>358,12,14)
@@ -757,6 +761,7 @@ DashboardScreen As screen:
                             Height: =30
                             LineHeight: =1.05
                             OnSelect: =Set(VarPopup,true)
+                            PaddingTop: =0
                             Size: |-
                                 =//19.22
                                 If(Parent.Width<358,11,Parent.Width>358,12,14)
