--- a/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
@@ -614,7 +614,7 @@ DashboardScreen As screen:
             FontWeight: =FontWeight.Bold
             Height: =Parent.Height
             Size: =26
-            Text: ="Dashboard"
+            Text: ="QQ Team"
             Width: =ctnHeaderDashboardScreen.Width/1.5
             X: =imgSchindlerlogoDS.Width+imgSchindlerlogoDS.X
             ZIndex: =3
